# Chat25

./: Dockerfile  README.md  build  credentials  launch_container  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
app/: app.py  model.py
scripts/: build.sh  credentials.sh  launch_container.sh
tests/: test_model.py  test_next.py  tests.py
