[project]
name = "chat25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aeon>=1.3.0",
    "argparse>=1.4.0",
    "gpy>=1.13.2",
    "gradio>=5.49.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=1.26.4",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pytz>=2025.2",
    "ruff>=0.14.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.12.0",
    "seaborn>=0.13.2",
    "sktime>=0.39.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchcde>=0.2.5",
    "torchdiffeq>=0.2.5",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
